release: sync 1.5.0 beta sources