@@ -3,7 +3,10 @@ package ru.strange.client.manager.friend;
 import net.minecraft.client.MinecraftClient;
 import ru.strange.client.Strange;
 
-import java.io.*;
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.List;
@@ -11,32 +14,51 @@ import java.util.List;
 public class FriendManager {
     public static MinecraftClient mc = MinecraftClient.getInstance();
     public static final List<Friend> friends = new ArrayList<>();
-    public static final File file =  new File(Strange.get.root + "\\configs", "friend.cfg");;
+    public static final File file = new File(new File(Strange.root, "configs"), "friend.cfg");
+    private static boolean initialized = false;
 
-    public static void init() {
+    public FriendManager() {
+        init();
+    }
+
+    public static synchronized void init() {
+        if (initialized) {
+            return;
+        }
+        boolean ready = false;
         try {
             if (!file.exists()) {
+                File parent = file.getParentFile();
+                if (parent != null && !parent.exists()) {
+                    parent.mkdirs();
+                }
                 file.createNewFile();
             } else {
                 readFriends();
             }
-        } catch (Exception e) {
-            e.printStackTrace();
+            ready = true;
+        } catch (IOException e) {
+            Strange.LOGGER.warn("Failed to initialize friend storage at {}", file.getAbsolutePath(), e);
+        } finally {
+            initialized = ready;
         }
-
     }
 
     public void add(String name) {
-        friends.add(new Friend(name));
+        String normalizedName = name == null ? "" : name.trim();
+        if (normalizedName.isEmpty() || isFriend(normalizedName)) {
+            return;
+        }
+        friends.add(new Friend(normalizedName));
         updateFile();
     }
 
     public Friend getFriend(String friend) {
-        return friends.stream().filter(isFriend -> isFriend.getName().equals(friend)).findFirst().get();
+        return friends.stream().filter(isFriend -> isFriend.getName().equalsIgnoreCase(friend)).findFirst().orElse(null);
     }
 
     public boolean isFriend(String friend) {
-        return friends.stream().anyMatch(isFriend -> isFriend.getName().equals(friend));
+        return friend != null && friends.stream().anyMatch(isFriend -> isFriend.getName().equalsIgnoreCase(friend));
     }
 
     public void remove(String name) {
@@ -53,33 +75,33 @@ public class FriendManager {
         return friends;
     }
     public static boolean getNearFriends(String name) {
-
-        return mc.world.getPlayers().stream().anyMatch(player -> player.getName().getString().equals(name));
-
+        return mc.world != null && name != null
+                && mc.world.getPlayers().stream().anyMatch(player -> player.getName().getString().equalsIgnoreCase(name));
     }
 
     public void updateFile() {
+        init();
         try {
             StringBuilder builder = new StringBuilder();
             friends.forEach(friend -> builder.append(friend.getName()).append("\n"));
-            Files.write(file.toPath(), builder.toString().getBytes());
-        } catch (Exception e) {
-            e.printStackTrace();
+            Files.writeString(file.toPath(), builder.toString(), StandardCharsets.UTF_8);
+        } catch (IOException e) {
+            Strange.LOGGER.warn("Failed to save friends to {}", file.getAbsolutePath(), e);
         }
     }
 
     public static void readFriends() {
-        try {
-            BufferedReader reader = new BufferedReader(new InputStreamReader(new DataInputStream(new FileInputStream(file.getAbsolutePath()))));
+        friends.clear();
+        try (BufferedReader reader = Files.newBufferedReader(file.toPath(), StandardCharsets.UTF_8)) {
             String line;
             while ((line = reader.readLine()) != null) {
-                friends.add(new Friend(line));
+                String normalizedName = line.trim();
+                if (!normalizedName.isBlank() && friends.stream().noneMatch(friend -> friend.getName().equalsIgnoreCase(normalizedName))) {
+                    friends.add(new Friend(normalizedName));
+                }
             }
-            reader.close();
-        } catch (Exception e) {
-            e.printStackTrace();
+        } catch (IOException e) {
+            Strange.LOGGER.warn("Failed to load friends from {}", file.getAbsolutePath(), e);
         }
     }
-
 }
-
